--- a/app/src/main/res/layout/event_edit.xml
+++ b/app/src/main/res/layout/event_edit.xml
@@ -98,13 +98,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/event_description"
-            android:id="@+id/event_description_text"/>
+            android:id="@+id/event_description_text"
+            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"/>
     </com.google.android.material.textfield.TextInputLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/event_spinner_layout"
+        app:layout_constraintTop_toBottomOf="@id/event_description"
+        android:paddingHorizontal="4dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/event_importance"
+            android:layout_gravity="center"/>
+        <Spinner
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/event_spinner"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/event_description"
+        app:layout_constraintTop_toBottomOf="@+id/event_spinner_layout"
         android:id="@+id/event_create"
         android:onClick="createEvent"
         android:text="@string/event_create"/>
