--- a/app/src/main/res/layout/check_edit.xml
+++ b/app/src/main/res/layout/check_edit.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
-    android:id="@+id/check_note">
+    android:id="@+id/check_edit"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/check_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="136dp"
         android:layout_marginTop="8dp"
         android:text="@string/back_button"
@@ -19,6 +21,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/check_frame"
+        app:layout_constraintTop_toBottomOf="@+id/check_back"
         android:orientation="vertical">
 
         <ImageView
@@ -46,16 +50,28 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_check"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/check_frame"
         android:scrollbars="vertical"
+        android:background="@color/hintText"
+        android:layout_weight="1"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/check_fab"
         android:onClick="addCheck"
-        android:background="@color/hintText" />
+        app:fabSize="auto"
+        android:layout_margin="24dp"/>
 
     <ImageView
         android:id="@+id/check_bot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/sticky_bottom"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"/>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
