--- a/app/src/main/res/layout/goal_edit.xml
+++ b/app/src/main/res/layout/goal_edit.xml
@@ -44,7 +44,7 @@
             android:layout_gravity="center_vertical|end"
             android:layout_marginLeft="125dp"
             android:background="@color/colorSticky"
-            android:hint="@string/event_title_hint"
+            android:hint="@string/goal_title"
             android:inputType="textCapSentences"
             android:textColorHint="@color/hintText"
             android:textSize="32sp" />
@@ -61,62 +61,70 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/event_start" />
-        <Button
-            android:id="@+id/goal_start1"
+            android:text="@string/goal_time" />
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/goal_time_spinner"/>
+        <Spinner
+            android:id="@+id/goal_freq_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=".4"
-            android:text="@string/event_date"/>
-        <Button
-            android:id="@+id/goal_start2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".3"
-            android:text="@string/event_time"/>
+            android:layout_weight=".3" />
     </LinearLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/goal_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/goal_start_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/event_description"
-            android:id="@+id/goal_description_text"
-            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/goal_spinner_layout"
-        app:layout_constraintTop_toBottomOf="@id/goal_description"
+        android:id="@+id/goal_date_layout"
+        app:layout_constraintTop_toBottomOf="@id/goal_start_layout"
         android:paddingHorizontal="4dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/event_importance"
+            android:text="@string/goal_date"
             android:layout_gravity="center"/>
-        <Spinner
+        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:id="@+id/goal_spinner"
+            android:id="@+id/goal_date"
             android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/goal_date_layout"
+        android:id="@+id/goal_runner_layout">
+
+        <ImageView
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:id="@+id/goal_runner"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/temp"
+            android:contentDescription="@string/goal_date"/>
+        <ImageView
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:id="@+id/goal_finishline"
+            android:layout_gravity="end"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/temp"
+            android:contentDescription="@string/goal_date"/>
+
     </LinearLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/goal_spinner_layout"
+        app:layout_constraintTop_toBottomOf="@+id/goal_runner_layout"
         android:id="@+id/goal_create"
         android:onClick="createGoal"
-        android:text="@string/event_create"/>
+        android:text="@string/goal_start"/>
 
     <ImageView
         android:id="@+id/goal_bottom"
