--- a/app/src/main/res/layout/goal_edit.xml
+++ b/app/src/main/res/layout/goal_edit.xml
@@ -56,21 +56,25 @@
         android:id="@+id/goal_start_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:padding="4dp"
         app:layout_constraintTop_toBottomOf="@id/goal_frame">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:text="@string/goal_time" />
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:id="@+id/goal_time_spinner"/>
         <Spinner
             android:id="@+id/goal_freq_spinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:layout_weight=".3" />
     </LinearLayout>
 
@@ -93,7 +97,7 @@
             android:layout_gravity="center"/>
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/goal_date_layout"
@@ -102,6 +106,8 @@
         <ImageView
             android:layout_width="56dp"
             android:layout_height="56dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/goal_runner"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
@@ -110,14 +116,15 @@
         <ImageView
             android:layout_width="56dp"
             android:layout_height="56dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/goal_finishline"
             android:layout_gravity="end"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/temp"
             android:contentDescription="@string/goal_date"/>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:layout_width="match_parent"
