--- a/app/src/main/res/layout/goal_note.xml
+++ b/app/src/main/res/layout/goal_note.xml
@@ -35,6 +35,7 @@
                 android:textSize="24sp"
                 android:paddingHorizontal="6dp"
                 android:layout_marginTop="-8dp"
+                android:layout_marginLeft="-64dp"
                 android:hint="@string/title"
                 android:textColorHint="@color/hintText"
                 android:background="@color/goal"
